Fixed wrap around on phone

--- a/style.css
+++ b/style.css
@@ -68,6 +68,10 @@ ul {
   margin-bottom: 60px;
 }
 
+.job-description {
+  margin-left: 130px;
+}
+
 .job-text > ul {
   margin-left: 86px;
 }
